link_libraries(${ZARKS_LIB_NAME})

add_executable(automaton automaton.cpp)
add_executable(cool_graph cool_graph.cpp)
add_executable(fractal_gif fractal_gif.cpp)
add_executable(heightmaps heightmaps.cpp)
add_executable(modern_art modern_art.cpp)
add_executable(noise_ridges noise_ridges.cpp)
add_executable(simplex_params simplex_params.cpp)
add_executable(trippy_noise trippy_noise.cpp)
add_executable(warp warp.cpp)
