add_library(${ZARKS_LIB_NAME}
    BitBuffer.cpp
    color.cpp
    GaussField.cpp
    GIF.cpp
    GIFStructs.cpp
    Image.cpp
    Map.cpp
    Mat3.cpp
    noise2D.cpp
    NoiseHash.cpp
    Noiser.cpp
    numerals.cpp
    Rect.cpp
    Shape3D.cpp
    Tessellation3D.cpp
    Triangle3D.cpp
    Vec3.cpp
)
